UI Improved for mobile

--- a/templates/accounts/order_history.html
+++ b/templates/accounts/order_history.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="col-lg-9">
-        <h2 class="mb-4">My Purchase History</h2>
+        <h2 class="mb-4">Purchase History</h2>
 
         {% for order in orders %}
         <div class="card shadow-sm mb-4">
