--- a/static/css/main.css
+++ b/static/css/main.css
@@ -180,7 +180,7 @@ body {
 /* Listing Grid Layout */
 .listing-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 0;
     justify-items: start;
 }
@@ -222,6 +222,13 @@ body {
 .cart-item-card .listing-card-image-container {
     height: 110px;
 }
+.listing-cart-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    line-height: 1.2;
+}
 /* --- END OF FIX --- */
 
 
@@ -259,6 +266,12 @@ body {
 }
 
 /* --- Title Modifiers --- */
+.listing-item-details {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin-right: 1rem;
+}
 .listing-title--card {
     font-size: 20px;
     -webkit-line-clamp: 2;
@@ -482,7 +495,7 @@ body {
     border-radius: var(--border-radius-sm);
 }
 .invoice-logo {
-    height: 90px; /* Adjust this value as needed */
+    height: 30px; /* Adjust this value as needed */
     width: auto;
 }
 
