UI Improved for mobile 5

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -168,6 +168,7 @@ body {
 
 /* Filter Sidebar */
 .filter-sidebar {
+    max-width: 350px;
     position: sticky;
     top: 80px;
     height: calc(100vh - 100px);
