--- a/templates/listings/listing_list.html
+++ b/templates/listings/listing_list.html
@@ -7,13 +7,20 @@
 {% block content %}
 <div class="row">
     <aside class="col-lg-3">
-        <div class="filter-sidebar">
-            <h5 class="mb-3">Filters</h5>
-            <form id="filter-form" method="get">
-                {{ filter.form.category|as_crispy_field }}
-                {{ filter.form.city|as_crispy_field }}
-                <button type="submit" class="btn btn-primary w-100 mt-3">Apply Filters</button>
-            </form>
+        <div class="filter-sidebar card p-3">
+            <h5 class="d-flex justify-content-between align-items-center mb-3">
+                <span>Filters</span>
+                <button class="btn btn-link d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#filter-collapse" aria-expanded="false" aria-controls="filter-collapse">
+                    <i class="fas fa-filter"></i>
+                </button>
+            </h5>
+            <div class="collapse d-lg-block" id="filter-collapse">
+                <form id="filter-form" method="get">
+                    {{ filter.form.category|as_crispy_field }}
+                    {{ filter.form.city|as_crispy_field }}
+                    <button type="submit" class="btn btn-primary w-100 mt-3">Apply Filters</button>
+                </form>
+            </div>
         </div>
     </aside>
 
@@ -44,7 +51,12 @@ document.addEventListener('DOMContentLoaded', function() {
                     'Content-Type': 'application/json'
                 }
             })
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
             .then(data => {
                 const icon = saveButton.querySelector('i');
                 if (data.is_saved) {
