--- a/templates/listings/listing_list.html
+++ b/templates/listings/listing_list.html
@@ -7,15 +7,24 @@
 {% block content %}
 <div class="row">
     <aside class="col-lg-3">
-        <div class="filter-sidebar card p-3">
+        <div class="filter-sidebar card p-3 d-none d-lg-block">
+            <h5 class="mb-3">Filters</h5>
+            <form id="filter-form" method="get">
+                {{ filter.form.category|as_crispy_field }}
+                {{ filter.form.city|as_crispy_field }}
+                <button type="submit" class="btn btn-primary w-100 mt-3">Apply Filters</button>
+            </form>
+        </div>
+
+        <div class="d-lg-none mb-3">
             <h5 class="d-flex justify-content-between align-items-center mb-3">
                 <span>Filters</span>
-                <button class="btn btn-link d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#filter-collapse" aria-expanded="true" aria-controls="filter-collapse">
-                    <i class="fas fa-filter"></i>
+                <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#filter-collapse" aria-expanded="false" aria-controls="filter-collapse">
+                    <i class="fas fa-filter text-warning"></i>
                 </button>
             </h5>
-            <div class="collapse show d-lg-block filter-collapse-mobile" id="filter-collapse">
-                <form id="filter-form" method="get">
+            <div class="collapse" id="filter-collapse">
+                <form id="filter-form-mobile" method="get">
                     {{ filter.form.category|as_crispy_field }}
                     {{ filter.form.city|as_crispy_field }}
                     <button type="submit" class="btn btn-primary w-100 mt-3">Apply Filters</button>
@@ -24,7 +33,7 @@
         </div>
     </aside>
 
-    <section class="col-lg-9">
+    <section class="col-12 col-lg-9">
         <h2 class="mb-3">{{ page_title }}</h2>
         <div id="listings-container" class="listing-grid">
             {% include 'listings/partials/listings_grid.html' with listings=listings %}
@@ -72,17 +81,4 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
-
-<style>
-@media (max-width: 991.98px) {
-    .filter-collapse-mobile.collapsing {
-        height: auto !important;
-        transition: none !important;
-    }
-
-    .filter-collapse-mobile.collapse:not(.show) {
-        display: none !important;
-    }
-}
-</style>
 {% endblock %}
